tests/errors/ty_errors/ty_errors.c
#error ty_errors.ty_errors:3:1 Type mismatch: 'unit' <> 'int'.
#error ty_errors.ty_errors:6:24 Type mismatch: 'string' <> 'int'.
#error ty_errors.ty_errors:12:18 Recursive type occurred while unifying '{?16}@ty_errors.ty_errors:12:13' to '({?13}@ty_errors.ty_errors:12:13 -> {?14}@ty_errors.ty_errors:12:18) -> {?17}@ty_errors.ty_errors:12:18'.
#error ty_errors.ty_errors:12:18 Arity mismatch: expected ((_) -> _, ..) -> .., but was _.
